# forgecode

./: .env.example  .forge.toml  .forge.toml.bak-histpath  .forge.toml.bak-minimax  .forge.toml.bak-opencode  .forge.toml.deepseek-good  .forge_history  .fossa.yaml  .gitignore  .mcp_trust.json  .pre-commit-config.yaml  ADR.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  Justfile  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  Taskfile.yml  audit_scorecard.json  codecov.yml  deny.toml  flake.nix  forge-repo-create-audit.jsonl  forge-repo-create-policy.md  forge-repo-reconcile.py  forge.schema.json  gitleaks.toml  install.ps1  install.sh  package-lock.json  package.json  reorg-marker.json
.cargo/: config.toml
.github/: CODEOWNERS  RULESET_BASELINE.md  pull_request_template.md
.github/workflows/: audit.yml  autofix.yml  bounty.yml  cargo-deny.yml  ci.yml  codeql.yml  helios-lite-nightly.yml  labels.yml  lint.yml  release-attestation.yml  release-drafter.yml  release.yml  sast-quick.yml  scorecard.yml  stale.yml  test.yml  trufflehog.yml
.grade-reports/: audit.raw  build.raw  fmt.raw  install.raw  lint.raw  test-unit.raw  typecheck.raw
.stashes-snapshot-2026-07-15/: INDEX.md  stash-0.patch  stash-1.patch  stash-2.patch  stash-3.patch  stash-4.patch
assets/brand/: README.md
audit/.lane-c03/: C03.md
audit/.lane-c04/: C04.md
audit/.lane-c05/: C05.md
audit/.lane-c06/: C06.md
audit/.lane-c07/: C07.md
audit/.lane-c08/: C08.md
audit/.lane-c09/: C09.md
audit/.lane-c10/: C10.md
audit/.lane-c11/: C11.md
benchmarks/: README.md
benchmarks/dual_harness/: Cargo.toml
benchmarks/dual_harness/fixtures/: shared-3task.v1.json
benchmarks/dual_harness/src/: lib.rs  main.rs
benchmarks/dual_harness/tests/: shared_3task.rs
benchmarks/forge_daemon_bench/: Cargo.toml
benchmarks/forge_daemon_bench/src/: main.rs
benchmarks/perf_harness/: Cargo.toml
config/: gix.toml  worktrunk.yaml
crates/forge3d/: Cargo.toml
crates/forge3d/src/: error.rs  lib.rs  main.rs  pidfile.rs  protocol.rs  registry.rs  server.rs
crates/forge_gpu/: Cargo.toml
crates/forge_gpu/src/: lib.rs
crates/forge_json_repair/: Cargo.toml
crates/forge_json_repair/benches/: repair.rs
crates/forge_mux/: Cargo.toml
crates/forge_mux/src/: lib.rs  tmux.rs
crates/forge_tui/: Cargo.toml
crates/forge_tui/src/: main.rs
crates/forge_walker/: Cargo.toml
crates/forge_walker/benches/: walk.rs  walker_bench.rs
docs/: FORK.md  NOTICE.md  forge-dev-install.md  index.md
imports/no-remote/forge-20260715/crates/governance-resolver/: Cargo.toml
imports/no-remote/forge-20260715/crates/governance-resolver/src/: lib.rs  resolver.rs
imports/no-remote/forge-20260715/crates/governance-resolver/src/sources/: agents_md.rs  claude_md.rs  config_toml.rs  mod.rs  settings_json.rs
imports/no-remote/forge-20260715/crates/governance-resolver/tests/: precedence_test.rs
imports/no-remote/forge-20260715/crates/governance-resolver/tests/fixtures/: agents_v1.md  claude_v1.md  config.toml  settings.json
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-contracts/: Cargo.toml
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-contracts/src/: bus.rs  contract.rs  envelope.rs  error.rs  event.rs  lib.rs  pubsub.rs  store.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/: Cargo.toml
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/benches/: event_sourcing_bench.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/: error.rs  event.rs  hash.rs  lib.rs  memory.rs  snapshot.rs  store.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/adapters/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/adapters/outbound/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/adapters/outbound/inmemory/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/adapters/outbound/persistence/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/application/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/application/dto/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/application/use_cases/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/domain/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/domain/entities/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/domain/events/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/domain/ports/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/domain/ports/inbound/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/domain/ports/outbound/: mod.rs
imports/no-remote/forge-20260715/phenoevents-merge/Eventra/rust/phenotype-event-sourcing/src/domain/services/: mod.rs
packaging/: README.md
plans/: 2026-04-05-config-init-at-startup-v1.md  2026-05-02-compaction-enhancement-v1.md  2026-05-04-forge-cursor-fix.md  2026-05-05-omniroute-benchmark-plan-v1.md
scripts/: benchmark.sh  install.sh  list-all-porcelain.sh  release-scorecard.sh  setup-aliases.sh  test-400-error-message.sh  test-zsh-utils.sh
shell-plugin/: forge.plugin.zsh  forge.theme.zsh
src/: main.rs
templates/: forge-custom-agent-template.md  forge-enhanced-summary-frame.md  forge-summarization-prompt-compact.md  forge-summarization-prompt.md
tests/: forge_daemon_build_contract_test.sh  release_contract_test.sh
(+6122 files in other folders)
