[package]
name = "forge"
version = "0.1.0"
edition = "2021"
description = "CLI task runner"
license = "MIT"
repository = "https://github.com/KooshaPari/forge"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
notify = "6.0"
toml = "0.8"
thiserror = "1.0"

[[bin]]
name = "forge"
path = "src/main.rs"
