[package]
name = "forge_daemon_bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "forge_daemon_bench"
path = "src/main.rs"

[dependencies]
forge_daemon = { path = "../../crates/forge_daemon" }
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "process"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
