[package]
name = "forge3d"
version = "0.1.0"
description = "Shared UDS + JSON-RPC daemon coordinating forgecode agents (PR-6)"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "forge3d"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["net", "sync", "io-util", "macros", "rt-multi-thread", "time", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
forge_drift = { path = "../forge_drift" }
parking_lot = "0.12"
libc = "0.2"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "io-util"] }