[package]
name = "forge_gpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GPU lane intent for heterogeneous CUDA routing (3090 primary / 1080 helper)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
