[package]
name = "forge_tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI dashboard for forge3d daemon"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
forge3d = { version = "=2.9.9", path = "../forge3d" }
