[package]
name = "forge_tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI dashboard for forge3d daemon"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
forge3d = { version = "=2.10.0", path = "../forge3d" }
