[package]
name = "forge_walker"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ignore.workspace = true
tokio.workspace = true
anyhow.workspace = true
derive_setters.workspace = true

[[bench]]
name = "walk"
harness = false

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
criterion.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
